--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +16,9 @@
     "express": "^4.17.2",
     "express-validation": "^3.0.8",
     "express-validator": "^6.14.0",
+    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.9"
+    "mongoose": "^6.1.9",
+    "supertest": "^6.2.2"
   }
 }
